change to sidebar

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Next.js application to view manga images in a stacked format.",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start"
   },
