--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,48 @@
-public/
-node_modules/
-.next/
-.qodo/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Next.js build output
+/.next/
+/out/
+
+# Production build artifacts
+/build
+
+# Static analysis cache
+/.eslintcache
+
+# Temporary files and logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Editor directories and files
+.idea
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.sublime-workspace
+
+# Miscellaneous
+.DS_Store
+Thumbs.db
+
+# Environment variables
+.env*.local
+.env
+
+# TypeScript cache
+*.tsbuildinfo
+public/manga/*
