--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "image-size": "^2.0.2",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
     "react-intersection-observer": "^9.16.0"
   },
   "devDependencies": {
+    "@types/image-size": "^0.8.0",
     "@types/node": "latest",
     "@types/react": "latest",
     "typescript": "latest"
