--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-intersection-observer": "^9.16.0"
+    "react-intersection-observer": "^9.16.0",
+    "react-responsive": "^10.0.1"
   },
   "devDependencies": {
     "@types/image-size": "^0.8.0",
