--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "image-size": "^2.0.2",
+    "lodash.debounce": "^4.0.8",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
@@ -17,7 +18,7 @@
     "react-responsive": "^10.0.1"
   },
   "devDependencies": {
-    "@types/image-size": "^0.8.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "latest",
     "@types/react": "latest",
     "typescript": "latest"
